# chalk

./: Cargo.toml  README.md
.github/workflows/: rust.yml
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/lealang_chalk_rs/: all.html  index.html  macro.chalk_trait_fns!.html  macro.chalk_trait_fns.html  macro.enum_default!.html  macro.enum_default.html  macro.enum_display!.html  macro.enum_display.html  macro.enum_fmt_impl!.html  macro.enum_fmt_impl.html  macro.enum_impls!.html  macro.enum_impls.html  macro.fn_alias!.html  macro.fn_alias.html  macro.impl_enums!.html  macro.impl_enums.html  sidebar-items.js  struct.Chalk.html
doc/search.desc/lealang_chalk_rs/: lealang_chalk_rs-desc-0-.js
doc/src/lealang_chalk_rs/: ansi_chalk.rs.html  basic_chalk.rs.html  lib.rs.html  rgb_chalk.rs.html  style.rs.html  utils.rs.html
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
doc/trait.impl/core/default/: trait.Default.js
doc/trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
doc/trait.impl/core/hash/: trait.Hash.js
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
examples/: ansi_color.rs  basic_color.rs  pride.rs  rgb_color.rs  style.rs
src/: lib.rs
